--- a/backend/package.json
+++ b/backend/package.json
@@ -2,24 +2,21 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.ts"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.16",
-    "@types/node": "^18.11.18",
-    "@types/socket.io": "^3.0.2",
-    "typescript": "^4.9.4"
-  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.16",
+    "typescript": "^4.9.5"
   }
 }
